force-app/main/default/objects/IDR_CRC_Escalation_Event__e/IDR_CRC_Escalation_Event__e.object-meta.xml
<CustomObject>
    <description>IDR_CRC_Escalation_Event is used to publish an event to CFMS if a case is Escalated to CRC team.</description>
    <label>IDR_CRC_Escalation_Event</label>
    <pluralLabel>IDR_CRC_Escalation_Events</pluralLabel>
</CustomObject>