force-app/main/default/objects/IDR_CRC_Escalation_Event__e/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <description>Masked Account number or policy number</description>
    <label>Account Number</label>
    <length>42</length>
    <type>Text</type>
</CustomField>