force-app/main/default/objects/IDR_CRC_Escalation_Event__e/fields/Address_Line1__c.field-meta.xml
<CustomField>
    <fullName>Address_Line1__c</fullName>
    <description>Non Customer Complaint Address Line 1</description>
    <label>Address Line1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>