force-app/main/default/objects/IDR_CRC_Escalation_Event__e/fields/AFCA_Date__c.field-meta.xml
<CustomField>
    <fullName>AFCA_Date__c</fullName>
    <description>AFCA Date</description>
    <label>AFCA Date</label>
    <type>Date</type>
</CustomField>