force-app/main/default/objects/IDR_CRC_Escalation_Event__e/fields/AFCA_Number__c.field-meta.xml
<CustomField>
    <fullName>AFCA_Number__c</fullName>
    <description>AFCA Number</description>
    <label>AFCA Number</label>
    <length>42</length>
    <type>Text</type>
</CustomField>