force-app/main/default/objects/IDR_CRC_Escalation_Event__e/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <description>Age Range</description>
    <label>Age</label>
    <length>255</length>
    <type>Text</type>
</CustomField>