force-app/main/default/objects/IDR_CRC_Escalation_Event__e/fields/Agent_License_Number__c.field-meta.xml
<CustomField>
    <fullName>Agent_License_Number__c</fullName>
    <description>Agent License Number</description>
    <label>Agent License Number</label>
    <length>42</length>
    <type>Text</type>
</CustomField>