force-app/main/default/objects/IDR_CRC_Escalation_Event__e/fields/Agent_License_Type__c.field-meta.xml
<CustomField>
    <fullName>Agent_License_Type__c</fullName>
    <description>Agent License Type</description>
    <label>Agent License Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>