force-app/main/default/objects/IDR_CRC_Escalation_Event__e/fields/ANZ_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>ANZ_Received_Date__c</fullName>
    <description>Date when the complaint was received</description>
    <label>ANZ Received Date</label>
    <type>Date</type>
</CustomField>