force-app/main/default/objects/IDR_CRC_Escalation_Event__e/fields/Channel_Received__c.field-meta.xml
<CustomField>
    <fullName>Channel_Received__c</fullName>
    <description>Channel Received, AKA Case.Origin</description>
    <label>Channel Received</label>
    <length>255</length>
    <type>Text</type>
</CustomField>