force-app/main/default/objects/IDR_CRC_Escalation_Event__e/fields/Complainant_Name__c.field-meta.xml
<CustomField>
    <fullName>Complainant_Name__c</fullName>
    <description>Name of the complainant or Business name</description>
    <label>Complainant Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>