force-app/main/default/objects/IDR_CRC_Escalation_Event__e/fields/Complainant_Type__c.field-meta.xml
<CustomField>
    <fullName>Complainant_Type__c</fullName>
    <label>Customer Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>