force-app/main/default/objects/IDR_CRC_Escalation_Event__e/fields/Complaint_Description__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Description__c</fullName>
    <description>Complaint description</description>
    <label>Complaint Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>