force-app/main/default/objects/IDR_CRC_Escalation_Event__e/fields/Complaint_Desired_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Desired_Outcome__c</fullName>
    <description>Desired outcome of the complaint</description>
    <label>Complaint Desired Outcome</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>