force-app/main/default/objects/IDR_CRC_Escalation_Event__e/fields/Complaint_Issue__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Issue__c</fullName>
    <description>Type of the complaint such as Advice etc</description>
    <label>Complaint Issue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>