force-app/main/default/objects/IDR_CRC_Escalation_Event__e/fields/Complaint_Issue_Key__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Issue_Key__c</fullName>
    <description>API name corresponding to the type of the complaint such as Advice etc</description>
    <label>Complaint Issue Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>