force-app/main/default/objects/IDR_CRC_Escalation_Event__e/fields/Complaint_Subsequent_Issue__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Subsequent_Issue__c</fullName>
    <description>Subsequent type of the complaint</description>
    <label>Complaint Subsequent Issue Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>