force-app/main/default/objects/IDR_CRC_Escalation_Event__e/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>Non Customer Complaint Country</description>
    <label>Country</label>
    <length>100</length>
    <type>Text</type>
</CustomField>