force-app/main/default/objects/IDR_CRC_Escalation_Event__e/fields/Customer_Business_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Business_Name__c</fullName>
    <label>Customer Business Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>