force-app/main/default/objects/IDR_CRC_Escalation_Event__e/fields/Customer_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Last_Name__c</fullName>
    <label>Customer Last Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>