force-app/main/default/objects/IDR_CRC_Escalation_Event__e/fields/Customer_Middle_Names__c.field-meta.xml
<CustomField>
    <fullName>Customer_Middle_Names__c</fullName>
    <label>Customer Middle Names</label>
    <length>50</length>
    <type>Text</type>
</CustomField>