force-app/main/default/objects/IDR_CRC_Escalation_Event__e/fields/Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Number__c</fullName>
    <description>CAP CIS ID of the customer</description>
    <label>Customer Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>