force-app/main/default/objects/IDR_CRC_Escalation_Event__e/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Non customer complaint Email</description>
    <label>Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>