force-app/main/default/objects/IDR_CRC_Escalation_Event__e/fields/Gender__c.field-meta.xml
<CustomField>
    <fullName>Gender__c</fullName>
    <description>Non Customer Complaint  Gender</description>
    <label>Gender</label>
    <length>255</length>
    <type>Text</type>
</CustomField>