force-app/main/default/objects/IDR_CRC_Escalation_Event__e/fields/IDR_Is_Common__c.field-meta.xml
<CustomField>
    <fullName>IDR_Is_Common__c</fullName>
    <label>Is this a possible systemic issue?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>