force-app/main/default/objects/IDR_CRC_Escalation_Event__e/fields/IDR_Systemic_Issue_Category__c.field-meta.xml
<CustomField>
    <fullName>IDR_Systemic_Issue_Category__c</fullName>
    <label>Possible Systemic Issue Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>