force-app/main/default/objects/IDR_CRC_Escalation_Event__e/fields/IDR_Systemic_Issue_Description__c.field-meta.xml
<CustomField>
    <fullName>IDR_Systemic_Issue_Description__c</fullName>
    <label>Why is this a possible systemic issue?</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>