force-app/main/default/objects/IDR_CRC_Escalation_Event__e/fields/Is_Written_Response_Requested__c.field-meta.xml
<CustomField>
    <fullName>Is_Written_Response_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is written response requested</description>
    <label>Is_Written_Response_Requested</label>
    <type>Checkbox</type>
</CustomField>