force-app/main/default/objects/IDR_CRC_Escalation_Event__e/fields/Is_Written_Response_Required__c.field-meta.xml
<CustomField>
    <fullName>Is_Written_Response_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is Written Response Requested by Complainant</description>
    <label>Is Written Response Required</label>
    <type>Checkbox</type>
</CustomField>