force-app/main/default/objects/IDR_CRC_Escalation_Event__e/fields/Mobile__c.field-meta.xml
<CustomField>
    <fullName>Mobile__c</fullName>
    <description>Non customer complaint Mobile</description>
    <label>Mobile</label>
    <length>40</length>
    <type>Text</type>
</CustomField>