force-app/main/default/objects/IDR_CRC_Escalation_Event__e/fields/Non_Financial_Remedy__c.field-meta.xml
<CustomField>
    <fullName>Non_Financial_Remedy__c</fullName>
    <label>Non-Financial Remedy</label>
    <length>50</length>
    <type>Text</type>
</CustomField>