force-app/main/default/objects/IDR_CRC_Escalation_Event__e/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Non customer complaint phone</description>
    <label>Phone</label>
    <length>40</length>
    <type>Text</type>
</CustomField>