force-app/main/default/objects/IDR_CRC_Escalation_Event__e/fields/Post_Code__c.field-meta.xml
<CustomField>
    <fullName>Post_Code__c</fullName>
    <description>Non Customer Complaint Post code</description>
    <label>Post Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>