force-app/main/default/objects/IDR_CRC_Escalation_Event__e/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <description>Complaint priority. Includes hardship/vulnerability information.</description>
    <label>Priority</label>
    <length>255</length>
    <type>Text</type>
</CustomField>