force-app/main/default/objects/IDR_CRC_Escalation_Event__e/fields/Queue_DeveloperName__c.field-meta.xml
<CustomField>
    <fullName>Queue_DeveloperName__c</fullName>
    <description>Developer Name of the queue (AKA workbasket) the case is assigned to</description>
    <label>Queue DeveloperName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>