force-app/main/default/objects/IDR_CRC_Escalation_Event__e/fields/Relationship_To_Complainant__c.field-meta.xml
<CustomField>
    <fullName>Relationship_To_Complainant__c</fullName>
    <label>Relationship to complainant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>