force-app/main/default/objects/IDR_CRC_Escalation_Event__e/fields/Remedy__c.field-meta.xml
<CustomField>
    <fullName>Remedy__c</fullName>
    <description>Complaint Remedy</description>
    <label>Remedy</label>
    <length>80</length>
    <type>Text</type>
</CustomField>