force-app/main/default/objects/IDR_CRC_Escalation_Event__e/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>State</description>
    <label>State</label>
    <length>100</length>
    <type>Text</type>
</CustomField>