force-app/main/default/objects/IDR_CRC_Escalation_Event__e/fields/Suburb__c.field-meta.xml
<CustomField>
    <fullName>Suburb__c</fullName>
    <description>Customer&#39;s suburb.</description>
    <label>Suburb</label>
    <length>255</length>
    <type>Text</type>
</CustomField>